--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -15,7 +15,7 @@
           </form>
           <h4>Products:</h4>
           <thead id='product-list' class='list-group'>
-            <table>
+            <table class='highlight'>
               <tr>
                 <th>Name</th>
                 <th>Category</th>
@@ -26,15 +26,9 @@
           <tbody data-id='{{this.id}}' class='list-group-item'>
             {{#each product}}
             <tr>
-              <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div class="modal" id="modal{{this.id}}">
-                  <div class="modal-content">
-                    <h4>{{this.prodName}}</h4>
-                    <p>{{this.prodCategory}}</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-                  </div>
-                </div>
+              <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div>
+                {{> modal}}
+              </div>
               </td>
               <td>{{this.prodCategory}}</td>
               <td>{{this.prodOnHand}}</td>
