--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -17,7 +17,7 @@
                     </form>
                     <h4>Users:</h4>
                     <thead id='user-list' class='list-group'>
-                        <table>
+                        <table class='highlight'>
                             <tr>
                                 <th>Name</th>
                                 <th>Access</th>
@@ -28,16 +28,9 @@
                     <tbody data-id='{{this.id}}' class='list-group-item'>
                         {{#each user}}
                         <tr>
-                            <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.usName}}</a><div class="modal"
-                                    id="modal{{this.id}}">
-                                    <div class="modal-content">
-                                        <h4>{{this.usName}}</h4>
-                                        <p>{{this.usPhone}}</p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-                                    </div>
-                                </div>
+                            <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.usName}}</a><div>
+                                {{> modalUser}}
+                            </div>
                             </td>
                             {{#if this.usRole}}
                             <td>Supervisor</td>
