updated modals again

--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class='container'>
             <h5>{{this.prodName}}</h5>
-            <table>
+            <table class='highlight'>
             <thead>
                 <tr>
                     <th>Category</th>
