--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -27,8 +27,8 @@
             {{#each product}}
             <tr>
               <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div>
-                {{> modal}}
-              </div>
+                  {{> modal}}
+                </div>
               </td>
               <td>{{this.prodCategory}}</td>
               <td>{{this.prodOnHand}}</td>
@@ -45,6 +45,15 @@
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
             <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
+          {{#if this.usRole}}
+          <ul id='product-list' class='list-group'>
+            <li>
+              <button id='super' class='btn btn-primary supervisorPage'><a href='/supervisor'>Supervisor</a></button>
+              <button id='super' class='btn btn-primary ordersPage'><a href='./order'>Orders</a></button>
+              <button id='super' class='btn btn-primary usersPage'><a href='./user'>Users</a></button>
+            </li>
+          </ul>
+          {{/if}}
         </div>
       </div>
     </div>
