--- a/views/supervisor.handlebars
+++ b/views/supervisor.handlebars
@@ -6,7 +6,7 @@
     <div class='background z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form class='mb-4' action='GET'>
+          <form class='mb-4' action='GET' id="searchForm">
             <div class='form-group flow-text'>
               <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
                 <h5>Products Search</h5>
@@ -57,4 +57,4 @@
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
-<script src='/js/products.js'></script>
+<script src='/js/productSearch.js'></script>
