added clear button to search

--- a/views/supervisor.handlebars
+++ b/views/supervisor.handlebars
@@ -13,6 +13,7 @@
               <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
+            <button id='clear' class='btn btn-primary right'>Clear</button>
           </form>
           <h4>Products:</h4>
           <thead id='product-list' class='list-group'>
