--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -6,12 +6,12 @@
     <div class='background z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form class='mb-4' action='GET'>
+          <form id='searchForm' class='mb-4' action='GET'>
             <div class='form-group flow-text'>
               <h5>Products Search</h5>
               <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
-            <button id='submit' class='btn btn-primary right'>Submit</button>
+            <button id='submit-search' class='btn btn-primary right'>Submit</button>
           </form>
           <h4>Products:</h4>
           <thead id='product-list' class='list-group'>
