--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -6,37 +6,14 @@
     <div class='background z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form id='searchForm' class='mb-4' action='GET'>
+          <form class='mb-4' action='GET' id='searchForm'>
             <div class='form-group flow-text'>
               <h5>Products Search</h5>
               <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
-            <button id='submit-search' class='btn btn-primary right'>Submit</button>
+            <button id='submit-search' class='btn btn-primary right'><a href='#modal{{this.id}}' class='modal-trigger'>Submit</a></button>
           </form>
-          <h4>Products:</h4>
-          <thead id='product-list' class='list-group'>
-            <table class='highlight'>
-              <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>On Hand</th>
-                <th>Add</th>
-              </tr>
-          </thead>
-          <tbody data-id='{{this.id}}' class='list-group-item'>
-            {{#each product}}
-            <tr>
-              <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div>
-                  {{> modal}}
-                </div>
-              </td>
-              <td>{{this.prodCategory}}</td>
-              <td>{{this.prodOnHand}}</td>
-              <td>{{> addOne}}</td>
-              </a></tr>
-            {{/each}}
-          </tbody>
-          </table>
+          {{> modal}}
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
