--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -8,35 +8,15 @@
         <div class='col-8 offset-2'>
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
-              <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
+              <button id='back' class='btn btn-primary right top-back'><a href='/basicuser'>Back</a></button>
               <h5>Order Search</h5>
               <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
             </div>
-            <button id='submit' class='btn btn-primary right'>Submit</button>
+            <button id='submit' class='btn btn-primary right'><a href='#modal{{this.user}}' class='modal-trigger'>Submit</a></button>
           </form>
-          <h4>Orders:</h4>
-          <thead id='order-list' class='list-group'>
-            <table class='highlight'>
-              <tr>
-                <th>Name</th>
-                <th>Unit of Issue</th>
-                <th>Item QTY</th>
-                <th>Add</th>
-              </tr>
-          </thead>
-          <tbody data-id='{{this.id}}' class='list-group-item'>
-            {{#each order}}
-            <tr>
-              <td><a href='#modal{{this.user}}' class='modal-trigger'>{{this.qty}}</a><div>
-                {{> modalOrder}}
-              </div>
-              </td>
-              <td>{{this.total}}</td>
-              <td>{{this.date}}</td>
-              </a></tr>
-            {{/each}}
-          </tbody>
-          </table>
+            {{> modalOrder}}
+          <div>
+          </div>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
