--- a/views/partials/modalOrder.handlebars
+++ b/views/partials/modalOrder.handlebars
@@ -1,21 +1,23 @@
 <div class="modal" id="modal{{this.id}}">
     <div class="modal-content">
         <div class='container'>
-            <h5>{{this.prodID}}</h5>
             <table class='highlight'>
-                <thead>
+                <thead id='order-list' class='list-group'>
                     <tr>
                         <th>Unit of Issue</th>
                         <th>Quantity</th>
                         <th>Add</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody data-id='{{this.id}}' class='list-group-item'>
+                    {{#each order}}
                     <tr>
+                        <td>{{this.prodID}}</td>
                         <td>{{this.olUnitofIssue}}</td>
                         <td>{{this.olQuantity}}</td>
                         <td>{{> addOne}}</td>
                     </tr>
+                    {{/each}}
                 </tbody>
             </table>
         </div>
