--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -7,8 +7,10 @@
   color: #000000; }
 
 .modal {
+  min-width: 85vw;
   border: #aeaef7 solid 5px;
-  border-radius: 5px; }
+  border-radius: 5px;
+  font-size: 15px; }
 
 /* universal */
 body {
@@ -54,6 +56,9 @@ h5 {
 
 #back {
   margin-right: 10px; }
+
+.pagination {
+  margin-top: 60px; }
 
 /* login page styles */
 .login-form {
