--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -13,7 +13,11 @@
             </div>
             <button id='submit-search' class='btn btn-primary right'><a href='#modal{{this.id}}' class='modal-trigger'>Submit</a></button>
           </form>
+          </div>
+          <div>
           {{> modal}}
+          </div>
+          <div class='row'>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
@@ -22,6 +26,8 @@
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
             <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
+          </div>
+          <div class='row'>
           {{#if this.usRole}}
           <ul id='product-list' class='list-group'>
             <li>
@@ -31,8 +37,9 @@
             </li>
           </ul>
           {{/if}}
+          </div>
         </div>
-      </div>
+      
     </div>
   </div>
 </div>
