--- a/views/partials/modalOldOrder.handlebars
+++ b/views/partials/modalOldOrder.handlebars
@@ -4,21 +4,17 @@
             <table class='highlight'>
                 <thead id='order-list' class='list-group'>
                     <tr>
-                        <th>Unit of Issue</th>
-                        <th>Quantity</th>
-                        <th> Delete </th>
-                        <th> Add </th>
+                        <th>Order #</th>
+                        <th>Submitted</th>
+                        <th>Employee</th>
                     </tr>
                 </thead>
                 <tbody data-id='{{this.id}}' class='list-group-item'>
                     {{#each order}}
                     <tr>
                         <td>{{this.prodID}}</td>
-                        <td>{{this.olUnitofIssue}}</td>
-                        <td>{{this.olQuantity}}</td>
-                        <td>{{this.rlTitle}}</td>
-                        <td>{{> delete}}</td>
-                        <td>{{> addOne}}</td>
+                        <td>{{this.updatedAt}}</td>
+                        <td>{{this.usSupervisorID}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
