updated order history modal

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -9,14 +9,14 @@
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
               <button id='back' class='btn btn-primary right top-back'><a href='/basicuser'>Back</a></button>
-              <button id='back' class='btn btn-primary right top-back'><a href='#modal{{this.user}}' class='modal-trigger'>History</a></button>
               <div>
-              {{> modalOrder}}
+              <button id='back' class='btn btn-primary right top-back'><a href='#myModal{{this.user}}' class='modal-trigger'>History</a></button>
               {{> modalOldOrder}}
               </div>
-              <button id='back' class='btn btn-primary right top-back'><a href='#modal{{this.user}}' class='modal-trigger'>Pending
-                  Order</a></button>
               <div>
+              <button id='back' class='btn btn-primary right top-back'><a href='#modal{{this.id}}' class='modal-trigger'>Pending
+                  Order</a></button>
+              {{> modalOrder}}
               </div>
               <h5>Order Search</h5>
               <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
@@ -42,3 +42,10 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
 <script src='/js/products.js'></script>
+<script>
+$(document).on('hidden.bs.modal', function (e) {
+    var target = $(e.target);
+    target.removeData('bs.modal')
+    .find(".modal-body").html('');
+});
+</script>
