--- a/views/partials/modalOrder.handlebars
+++ b/views/partials/modalOrder.handlebars
@@ -1,4 +1,4 @@
-<div class="modal" id="myModal{{this.id}}">
+<div class="modal" id="modalOrder{{this.id}}">
     <div class="modal-content">
         <div class='container'>
             <table class='highlight'>
