--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -13,7 +13,7 @@
                             <input type='text' id='user-text' class='form-control' aria-describedby='user-text' placeholder='Enter user'>
 
                         </div>
-                        <button id='submit' class='btn btn-primary right'><a href='#modal{{this.id}}' class='modal-trigger'>Submit</a></button>
+                        <button id='submit' class='btn btn-primary right'><a href='#modalUserList{{this.id}}' class='modal-trigger'>Submit</a></button>
                     </form>
                     {{> modalUser}}
                     <ul class="pagination">
