--- a/views/partials/modalOldOrder.handlebars
+++ b/views/partials/modalOldOrder.handlebars
@@ -1,4 +1,4 @@
-<div class="modal" id="modal{{this.id}}">
+<div class="modal" id="modalOrderHistory{{this.id}}">
     <div class="modal-content">
         <div class='container'>
             <table class='highlight'>
