passport authentication work in progress

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
     <div class='login z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form class='mb-4 login-form' action='/login' method='POST'>
+          <form class='mb-4 login-form' action='/signup' method='POST' id='signup' name='signup'>
             <div class="input-field">
               <input id="first_name" type="text" class="validate login-bg" name='username'/>
               <label for="first_name">User Name</label>
@@ -17,7 +17,7 @@
                 <label for="password">Password</label>
               </div>
             </div>
-            <button id='submit' class='btn btn-primary right login-submit' value='Log in'>Submit</button>
+            <button id='submit' class='btn btn-primary right login-submit' value='Sign Up'>Sign Up</button>
           </form>
         </div>
       </div>
