--- a/views/partials/modalProducts.handlebars
+++ b/views/partials/modalProducts.handlebars
@@ -13,7 +13,7 @@
                 <tbody data-id='{{this.id}}' class='list-group-item'>
                     {{#each product}}
                     <tr>
-                        <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a></td>
+                        <td>{{this.prodName}}</a></td>
                         <td>{{this.prodCategory}}</td>
                         <td>{{this.prodOnHand}}</td>
                         <td>{{> addOne}}</td>
