--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -43,9 +43,28 @@
           </form>
         </div>
         <div>
-          {{> modalProducts}}
+          <table class='highlight'>
+                <thead id='product-list' class='list-group'>
+                    <tr>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Quantity</th>
+                        <th>Add</th>
+                    </tr>
+                </thead>
+                <tbody data-id='{{this.id}}' class='list-group-item'>
+                    {{#each product}}
+                    <tr>
+                        <td>{{this.prodName}}</td> 
+                        <td>{{this.prodCategory}}</td>
+                        <td>{{this.prodOnHand}}</td>
+                        <td>{{> addOne}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>  
         </div>
-
+               
         <div class='row'>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
@@ -68,7 +87,6 @@
           {{/if}}
         </div>
       </div>
-
     </div>
   </div>
 </div>
