--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -10,21 +10,16 @@
             <div class='form-group flow-text'>
               <button id='back' class='btn btn-primary right top-back'><a href='/basicuser'>Back</a></button>
               <div>
-              <button id='back' class='btn btn-primary right top-back'><a href='#modalOrderHistory{{this.user}}' class='modal-trigger'>History</a></button>
-              {{> modalOldOrder}}
+                <h5>Order Search</h5>
+                <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
               </div>
-              <div>
-              <button id='back' class='btn btn-primary right top-back'><a href='#modalOrder{{this.id}}' class='modal-trigger'>Pending
-                  Order</a></button>
-              {{> modalOrder}}
-              </div>
-              <h5>Order Search</h5>
-              <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
-            </div>
-            <button id='submit' class='btn btn-primary right'>Submit</a></button>
+              <button id='submit' class='btn btn-primary right'>Submit</a></button>
           </form>
           <div>
+            {{> modalOrder}}
+            <br> {{> modalOldOrder}}
           </div>
+
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
@@ -33,13 +28,12 @@
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
             <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
-<script src='/js/index.js'></script>
-<script src='/js/products.js'></script>
-
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
+  <script src='/js/index.js'></script>
+  <script src='/js/products.js'></script>
