added category search option for products

--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -95,3 +95,4 @@
 <script src='/js/index.js'></script>
 <script src='/js/products.js'></script>
 <script src='/js/productSearch.js'></script>
+<script src='/js/categorySearch.js'></script>
