--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -39,32 +39,40 @@
               <h5>Products Search</h5>
               <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
-            <button data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right">Submit</button>
+            <div class='row'>
+              <button data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right">Submit</button>
+              <div>
+                <a id='category-btn' class='dropdown-trigger btn' href='#' data-target='dropdown1'>Category</a>
+                <ul id='dropdown1' class='dropdown-content'>
+                  {{!-- category search list is rendered here --}}
+                </ul>
+              </div>
+            </div>
           </form>
         </div>
         <div>
           <table class='highlight'>
-                <thead id='product-list' class='list-group'>
-                    <tr>
-                        <th>Name</th>
-                        <th>Category</th>
-                        <th>Quantity</th>
-                        <th>Add</th>
-                    </tr>
-                </thead>
-                <tbody data-id='{{this.id}}' class='list-group-item'>
-                    {{#each product}}
-                    <tr>
-                        <td>{{this.prodName}}</td> 
-                        <td>{{this.prodCategory}}</td>
-                        <td>{{this.prodOnHand}}</td>
-                        <td>{{> addOne}}</td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>  
+            <thead id='product-list' class='list-group'>
+              <tr>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Quantity</th>
+                <th>Add</th>
+              </tr>
+            </thead>
+            <tbody data-id='{{this.id}}' class='list-group-item'>
+              {{#each product}}
+              <tr>
+                <td>{{this.prodName}}</td>
+                <td>{{this.prodCategory}}</td>
+                <td>{{this.prodOnHand}}</td>
+                <td>{{> addOne}}</td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
         </div>
-               
+
         <div class='row'>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
@@ -93,6 +101,6 @@
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
+<script src='/js/categorySearch.js'></script>
 <script src='/js/products.js'></script>
 <script src='/js/productSearch.js'></script>
-<script src='/js/categorySearch.js'></script>
