added clear button to product search. AGAIN

--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -41,6 +41,7 @@
             </div>
             <div class='row'>
               <button data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right">Submit</button>
+              <a id="clear" class="btn modal-trigger btn btn-primary right">Clear</a>
               <div>
                 <a id='category-btn' class='dropdown-trigger btn' href='#' data-target='dropdown1'>Category</a>
                 <ul id='dropdown1' class='dropdown-content'>
