--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
                 <label for="password">Password</label>
               </div>
             </div>
-            <button id='submit' class='btn btn-primary right login-submit'><a href='/basicuser'>Log In</a></button>
+            <button id='submit' type='submit' class='btn btn-primary right login-submit'>Log In</button>
           </form>
         </div>
       </div>
