--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,10 +6,10 @@
     <div class='login z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form class='mb-4 login-form' action='/signup' method='POST' id='signup' name='signup'>
+          <form class='mb-4 login-form' action='/api/users' method='POST' id='signup' name='signup'>
             <div class="input-field">
-              <input id="first_name" type="text" class="validate login-bg" name='username'/>
-              <label for="first_name">User Name</label>
+              <input id="username" type="text" class="validate login-bg" name='username'/>
+              <label for="username">User Name</label>
             </div>
             <div class="row">
               <div class="input-field">
@@ -17,7 +17,7 @@
                 <label for="password">Password</label>
               </div>
             </div>
-            <button id='submit' class='btn btn-primary right login-submit' value='Sign Up'>Sign Up</button>
+            <button id='submit' type='submit' class='btn btn-primary right login-submit' value='Sign Up'>Sign Up</button>
           </form>
         </div>
       </div>
