--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -83,7 +83,7 @@ body {
     background-color: rgb(62, 62, 255) !important;
   }
   #logOut {
-  
+    margin-top: 60px;
     margin-bottom: 10px;
   }
   .top-back {
