--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -19,15 +19,10 @@
             {{> modalOrder}}
             <br> {{> modalOldOrder}}
           </div>
-
-          <ul class="pagination">
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active page"><a href="#!">1</a></li>
-            <li class="waves-effect page"><a href="#!">2</a></li>
-            <li class="waves-effect page"><a href="#!">3</a></li>
-            <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-            <button id='logOut' class='btn btn-primary right'>Log out</button>
-          </ul>
+          <br>
+          <div>
+            <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+          </div>
           </div>
         </div>
       </div>
