--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -25,6 +25,12 @@
                                 <td>Employee</td>
                                 {{/if}}
                                 <td>{{this.usPhone}}</td>
+                                <td>
+                                    {{!-- edit info --}}
+                                    <a class="btn-floating btn-med red">
+                                        <i class="large material-icons">mode_edit</i>
+                                    </a>
+                                </td>
                             </tr>
                             {{/each}}
                         </tbody>
@@ -38,3 +44,4 @@
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
+<script src='/js/products.js'></script>
