--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -96,6 +96,13 @@ body {
   .pagination {
     margin-top: 60px;
   }
+  .top-back {
+    margin-bottom: 20px;
+  }
+  .fixed-action-button {
+    position: relative;
+  }
+  
   /* login page styles */
   .login-form {
     padding-top: 20px;
