--- a/views/partials/delete.handlebars
+++ b/views/partials/delete.handlebars
@@ -1,2 +1,2 @@
 
-	<button id='product-list' class="delete btn right add waves-effect" data-id="{{this.id}}">x</button>
+<a id='product-list' class="delete right add btn-floating btn-large waves-effect waves-light red" data-id="{{this.id}}"><i class="material-icons">subtract</i></a>
