--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -16,8 +16,46 @@
               <button id='submit' class='btn btn-primary right'>Submit</a></button>
           </form>
           <div>
-            {{> modalOrder}}
-            <br> {{> modalOldOrder}}
+            <table class='highlight'>
+              <thead id='order-list' class='list-group'>
+                <tr>
+                  <th>Unit of Issue</th>
+                  <th>Quantity</th>
+                  <th> Delete </th>
+                  <th> Add </th>
+                </tr>
+              </thead>
+              <tbody data-id='{{this.id}}' class='list-group-item'>
+                {{#each order}}
+                <tr>
+                  <td>{{this.prodID}}</td>
+                  <td>{{this.olUnitofIssue}}</td>
+                  <td>{{this.olQuantity}}</td>
+                  <td>{{this.rlTitle}}</td>
+                  <td>{{> delete}}</td>
+                  <td>{{> addOne}}</td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
+            <br>
+            <table class='highlight'>
+              <thead id='order-list' class='list-group'>
+                <tr>
+                  <th>Order #</th>
+                  <th>Submitted</th>
+                  <th>Employee</th>
+                </tr>
+              </thead>
+              <tbody data-id='{{this.id}}' class='list-group-item'>
+                {{#each order}}
+                <tr>
+                  <td>{{this.prodID}}</td>
+                  <td>{{this.usSupervisorID}}</td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
           </div>
           <br>
           <div>
@@ -32,3 +70,4 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
   <script src='/js/index.js'></script>
   <script src='/js/products.js'></script>
+  <script src='/js/orderSearch.js'></script>
