--- a/views/partials/addOne.handlebars
+++ b/views/partials/addOne.handlebars
@@ -1,1 +1,2 @@
-<button id='product-list' class="add btn right waves-effect" data-id="{{this.id}}">+</button>
+
+<a id='product-list' class=" add right btn-floating btn-small waves-effect waves-light red" data-id='{{this.id}}'><i class="material-icons">add</i></a>
