--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -60,6 +60,7 @@
           <br>
           <div>
             <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+            {{> navbuttons}}
           </div>
           </div>
         </div>
