--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -36,6 +36,7 @@
                         </tbody>
                     </table>
                     <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+                    {{> navbuttons}}
                 </div>
             </div>
         </div>
