--- a/views/underpar.handlebars
+++ b/views/underpar.handlebars
@@ -31,6 +31,11 @@
 				</tbody>
 			</table>
 		</div>
+		<br>
+		<div>
+			<a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+			{{> navbuttons}}
+		</div>
 	</div>
 </div>
 
