--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     <div class='login z-depth-3'>
       <div class='row padIt'>
         <div class='col-8 offset-2'>
-          <form class='mb-4 login-form' action='/login' method='POST'>
+          <form class='mb-4 login-form' action='/api/login' method='POST'>
             <div class="input-field">
               <input id="first_name" type="text" class="validate" name='username'>
               <label for="first_name">User Name</label>
@@ -17,11 +17,8 @@
                 <label for="password">Password</label>
               </div>
             </div>
-<<<<<<< HEAD
-            <button id='submit' type='submit' class='btn btn-primary right login-submit'>Log In</button>
-=======
-              <a href='/basicuser' class='btn btn-primary right login-submit'>Log In</a>
->>>>>>> a9945fdbc0bb68d60a2f9755b3f0e43f3d4f14ea
+            <input type="submit" value="Log In" class='btn btn-primary right login-submit'/>
+              {{!-- <a href='/basicuser' class='btn btn-primary right login-submit'>Log In</a> --}}
           </form>
         </div>
       </div>
