--- a/views/partials/modalProducts.handlebars
+++ b/views/partials/modalProducts.handlebars
@@ -13,7 +13,7 @@
                     {{#each product}}
                 <tbody data-id='{{this.id}}' class='list-group-item'>
                     <tr>
-                        <td>{{this.prodName}}</a></td>
+                        <td>{{this.prodName}}</td>
                         <td>{{this.prodCategory}}</td>
                         <td>{{this.prodOnHand}}</td>
                         <td>{{> addOne}}</td>
