removed 2 modal files

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -15,14 +15,14 @@
               </div>
               <button id='submit' class='btn btn-primary right'>Submit</a></button>
           </form>
-          <div>
+          <div class='container'>
             <table class='highlight'>
               <thead id='order-list' class='list-group'>
                 <tr>
                   <th>Unit of Issue</th>
                   <th>Quantity</th>
-                  <th> Delete </th>
-                  <th> Add </th>
+                  <th>Delete</th>
+                  <th>Add</th>
                 </tr>
               </thead>
               <tbody data-id='{{this.id}}' class='list-group-item'>
