corrected symbol on delete buttons, and html routes

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -15,7 +15,7 @@
               </div>
               <button id='submit' class='btn btn-primary right'>Submit</a></button>
           </form>
-          <div class='container'>
+          <div>
             <table class='highlight'>
               <thead id='order-list' class='list-group'>
                 <tr>
