--- a/views/partials/delete.handlebars
+++ b/views/partials/delete.handlebars
@@ -1,2 +1,2 @@
 
-<a id='product-list' class="delete right add btn-floating btn-large waves-effect waves-light red" data-id="{{this.id}}"><i class="material-icons">subtract</i></a>
+<a id='product-list' class="delete right add btn-floating btn-small waves-effect waves-light red" data-id="{{this.id}}"><i class="material-icons">remove</i></a>
