--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -54,7 +54,7 @@
               <tbody id='order-history' data-id='{{this.id}}' class='list-group-item'>
                 {{#each order}}
                 <tr>
-                  <td><a class="waves-effect waves-light modal-trigger" href="#modal{{this.id}}">{{this.id}}{{> orderHistoryModal}}</a></td>
+                  <td><a class='waves-effect waves-light modal-trigger' href='#modal{{this.id}}'>{{this.id}}{{> orderHistoryModal}}</a></td>
                   <td>{{this.updatedAt}}</td>
                   <td>{{this.usName}}</td>
                 </tr>
