--- a/views/partials/orderHistoryModal.handlebars
+++ b/views/partials/orderHistoryModal.handlebars
@@ -10,7 +10,7 @@
                     <th>Employee</th>
                 </tr>
             </thead>
-            <tbody id='order-history' data-id='{{this.id}}' class='list-group-item'>
+            <tbody data-id='{{this.id}}' class='list-group-item'>
                 <tr>
                     <td>{{this.id}}</td>
                     <td>{{this.updatedAt}}</td>
