corrected logout function

--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -76,7 +76,7 @@
             </tbody>
           </table>
         </div>
-        <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+        <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
         {{> navbuttons}}
       </div>
     </div>
