updated navigation buttons to function correctly

--- a/views/partials/navbuttons.handlebars
+++ b/views/partials/navbuttons.handlebars
@@ -3,10 +3,10 @@
 	{{!-- {{#if this.usRole}} --}}
 	<ul id='product-list' class='list-group'>
 		<li>
-			<button class='btn btn-primary ordersPage'><a href='/basicuser'>Products</a></button>
-			<button class='btn btn-primary ordersPage'><a href='/order'>Orders</a></button>
-			<button class='btn btn-primary ordersPage'><a href='/underpar'>Products under PAR</a></button>
-			<button class='btn btn-primary usersPage'><a href='/user'>Users</a></button>
+			<a class='btn btn-primary ordersPage' href='/basicuser'>Products</a>
+			<a class='btn btn-primary ordersPage' href='/order'>Orders</a>
+			<a class='btn btn-primary ordersPage' href='/underpar'>Products under PAR</a>
+			<a class='btn btn-primary ordersPage' href='/user'>Users</a>
 		</li>
 	</ul>
 	{{!-- {{/if}} --}}
